--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Budget Planner</title>
+  <link rel="stylesheet" href="/src/style.css" />
 </head>
 <body>
   <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
 
